# AI-Job-Agent

./: README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/: app.py  requirements.txt
backend/chains/: application_chain.py  match_chain.py  parser_chain.py  query_chain.py  resume_chain.py
backend/llms/: llm.py  prompts.py
backend/loaders/: resume_loader.py
backend/routes/: apply.py  job.py  resume.py
backend/services/: application_agent.py  job_service.py  match_service.py  resume_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
